--- a/hcm_odoo12/repeater/views/repeater_views_full.xml
+++ b/hcm_odoo12/repeater/views/repeater_views_full.xml
@@ -7,7 +7,6 @@
             <field name="arch" type="xml">
                 <tree string="Product Template">
                     <field name="state" />
-                    <field name="working_state" />
                     <field name="name" />
                     <field name="category_id" />
                     <field name="brand_id" />
@@ -23,7 +22,7 @@
                     <field name="phone" />
                     <field name="dau_moi_hcm_id" />
                     <field name="hcm_phone" />
-                    <field name="customer" />
+                    <field name="customer_id" />
                     <field name="customer_phone" />
                     <field name="start_time" />
                     <!-- <field name="bien_ban_xac_nhan" /> -->
@@ -37,7 +36,34 @@
                 </tree>
             </field>
         </record>
-       
+        <record id="template_search_new" model="ir.ui.view">
+            <field name="name">template_search_new</field>
+            <field name="model">repeater.repeater</field>
+            <field name="arch" type="xml">
+                <search string="Search">
+                    <field name="name" />
+                    <field name="state" />
+                    <field name="long" />
+                    <field name="lat" />
+                    <!-- <field name="category" /> -->
+                    <field name="category_id" />
+                    <field name="brand_id" />
+                    <field name="model_id" />
+                    <field name="address" />
+                    <field name="partner_id" />
+                    <separator />
+                    <!-- <filter name="danxe" string="Dán xe" domain="[('loaiphuluc','=','danxe')]"/>
+					<filter name="lapframe" string="Lắp Frame" domain="[('loaiphuluc','=','lapframe')]"/> -->
+                    <group expand="0" string="Group By...">
+                        <filter name="name" string="Tên Repeater" context="{'group_by':'name'}" />
+                        <filter name="state" string="Loại Thiết Bị" context="{'group_by':'state'}" />
+                        <filter name="brand_id" string="Hãng sản xuất" context="{'group_by':'brand_id'}" />
+                        <filter name="model_id" context="{'group_by':'model_id'}" />
+                        <filter name="partner_id" string="Nhân viên chuyên quản" context="{'group_by':'name'}" />
+                    </group>
+                </search>
+            </field>
+        </record>
         <record model="ir.actions.act_window" id="repeater_act_full">
             <field name="name">Repeater</field>
             <field name="res_model">repeater.repeater</field>
@@ -57,6 +83,6 @@
             <field name="view_id" ref="repeater_repeater_tree_full" />
             <field name="act_window_id" ref="repeater_act_full" />
         </record>
-        <menuitem id="full_sub_repeater_menu" string="Repeater full" name="Repeater toàn bộ trường" parent="configuration_menu" action="repeater_act_full" groups="base.group_erp_manager"/>
+        <menuitem id="full_sub_new_template_menu" string="Repeater full" name="Repeater full" parent="new_template_menu" action="repeater_act_full" groups="base.group_erp_manager"/>
     </data>
 </odoo>
